--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "gatsby-link": "^1.6.34",
         "gatsby-plugin-react-helmet": "^2.0.3",
         "gatsby-plugin-sass": "^1.0.16",
+        "gatsby-plugin-typography": "^1.7.18",
         "gatsby-source-filesystem": "^1.5.15",
         "gatsby-transformer-remark": "^1.7.29",
         "react-helmet": "^5.2.0"
@@ -22,10 +23,11 @@
         "develop": "gatsby develop",
         "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+        "deploy": "gatsby build --prefix-paths && gh-pages -d public -b gh-pages"
     },
     "devDependencies": {
+        "gh-pages": "^1.1.0",
         "prettier": "^1.10.2",
-        "gh-pages": "^1.1.0"
+        "typography": "^0.16.6"
     }
 }
