--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{}
+{"name":"LightsOut","short_name":"Lights Out - Gatsby","start_url":"/","background_color":"#f7f0eb","theme_color":"#a2466c","display":"fullscreen","icons":[{"src":"/favicons/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"/favicons/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}]}
