--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-    "name": "gatsby-webpage",
-    "description": "Webpage of Sona Praneeth Akula",
-    "version": "1.0.0",
+    "name": "lights-out-gatsby",
+    "description": "Lights out Gatsby react app",
+    "version": "0.11.1",
     "author": "Sona Praneeth Akula <sonapraneeth.akula@gmail.com>",
     "dependencies": {
         "gatsby": "^1.9.158",
         "gatsby-link": "^1.6.34",
+        "gatsby-plugin-google-analytics": "^1.0.28",
+        "gatsby-plugin-manifest": "^1.0.15",
+        "gatsby-plugin-nprogress": "^1.0.14",
+        "gatsby-plugin-offline": "^1.0.15",
         "gatsby-plugin-react-helmet": "^2.0.3",
         "gatsby-plugin-sass": "^1.0.16",
         "gatsby-plugin-typography": "^1.7.18",
@@ -27,6 +31,7 @@
     },
     "devDependencies": {
         "gh-pages": "^1.1.0",
+        "material-ui": "^1.0.0-beta.40",
         "prettier": "^1.10.2",
         "typography": "^0.16.6"
     }
