--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "version": "0.11.1",
     "author": "Sona Praneeth Akula <sonapraneeth.akula@gmail.com>",
     "dependencies": {
-        "gatsby": "^1.9.158",
+        "gatsby": "^1.9.248",
         "gatsby-link": "^1.6.34",
         "gatsby-plugin-google-analytics": "^1.0.28",
         "gatsby-plugin-manifest": "^1.0.15",
         "gatsby-plugin-nprogress": "^1.0.14",
         "gatsby-plugin-offline": "^1.0.15",
         "gatsby-plugin-react-helmet": "^2.0.3",
-        "gatsby-plugin-sass": "^1.0.16",
+        "gatsby-plugin-sass": "^1.0.25",
         "gatsby-plugin-typography": "^1.7.18",
         "gatsby-source-filesystem": "^1.5.15",
         "gatsby-transformer-remark": "^1.7.29",
@@ -34,5 +34,10 @@
         "material-ui": "^1.0.0-beta.40",
         "prettier": "^1.10.2",
         "typography": "^0.16.6"
-    }
+    },
+    "browserslist": [
+        "> 1%",
+        "IE >= 9",
+        "last 2 versions"
+    ]
 }
